--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/tbushman/emergencyservices#readme",
   "dependencies": {
     "async": "^2.1.4",
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
