--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.15.2",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
+    "debug": "^3.0.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
