--- a/package.json
+++ b/package.json
@@ -23,31 +23,31 @@
   },
   "homepage": "https://github.com/tbushman/emergencyservices#readme",
   "dependencies": {
-    "async": "^2.1.4",
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.15.2",
+    "async": "^2.5.0",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.18.0",
     "connect-mongodb-session": "^1.3.0",
     "cookie-parser": "^1.4.3",
-    "debug": "^3.0.0",
+    "debug": "^3.0.1",
     "dotenv": "^2.0.0",
-    "express": "^4.14.0",
-    "express-session": "^1.14.2",
+    "express": "^4.15.4",
+    "express-session": "^1.15.5",
     "google-geolocation": "^1.0.1",
     "i": "^0.3.5",
-    "jquery": "^3.1.1",
-    "leaflet": "^1.0.2",
+    "jquery": "^3.2.1",
+    "leaflet": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "moment": "^2.17.1",
-    "mongodb": "^2.2.19",
-    "mongoose": "^4.7.6",
-    "multer": "^1.2.1",
-    "npm": "^4.1.1",
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.31",
+    "mongoose": "^4.11.10",
+    "multer": "^1.3.0",
+    "npm": "^4.6.1",
     "office-ui-fabric-core": "^5.1.0",
-    "office-ui-fabric-js": "^1.3.0",
+    "office-ui-fabric-js": "^1.4.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
-    "pug": "^2.0.0-beta9",
-    "serve-favicon": "^2.3.2"
+    "passport-local-mongoose": "^4.2.1",
+    "pug": "^2.0.0-rc.4",
+    "serve-favicon": "^2.4.3"
   }
 }
