--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongodb": "^2.2.35",
     "mongoose": "^4.13.14",
     "multer": "^1.3.1",
+    "node-rest-client": "^3.1.0",
     "npm": "^4.6.1",
     "office-ui-fabric-core": "^5.1.0",
     "office-ui-fabric-js": "^1.5.0",
