--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
   },
   "homepage": "https://github.com/tbushman/emergencyservices#readme",
   "dependencies": {
+    "arp": "0.0.3",
     "async": "^2.6.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
-    "connect-mongodb-session": "^1.4.0",
+    "connect-mongodb-session": "^2.2.0",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "dotenv": "^2.0.0",
@@ -34,14 +35,15 @@
     "express-session": "^1.15.6",
     "google-geolocation": "^1.0.2",
     "i": "^0.3.6",
-    "jquery": "^3.3.1",
+    "ip": "^1.1.5",
+    "jquery": "^3.4.1",
     "leaflet": "^1.3.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.2",
-    "mongodb": "^2.2.35",
-    "mongoose": "^4.13.14",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.3",
     "multer": "^1.3.1",
-    "npm": "^4.6.1",
+    "npm": "^6.13.4",
     "office-ui-fabric-core": "^5.1.0",
     "office-ui-fabric-js": "^1.5.0",
     "passport": "^0.3.2",
