--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
     "multer": "^1.3.1",
+    "network": "^0.4.1",
     "npm": "^6.13.4",
     "office-ui-fabric-core": "^5.1.0",
     "office-ui-fabric-js": "^1.5.0",
