--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.5.0",
     "pug": "^2.0.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.5",
     "serve-favicon": "^2.5.0"
   }
 }
