--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ip": "^1.1.5",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
+    "mammoth": "^1.4.9",
     "mkdirp": "^0.5.1",
     "moment": "^2.24.0",
     "mongodb": "^3.4.1",
