--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "google-geolocation": "^1.0.2",
+    "googleapis": "^47.0.0",
     "i": "^0.3.6",
     "ip": "^1.1.5",
     "jquery": "^3.4.1",
@@ -48,6 +49,7 @@
     "office-ui-fabric-core": "^5.1.0",
     "office-ui-fabric-js": "^1.5.0",
     "passport": "^0.3.2",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.5.0",
     "pug": "^2.0.4",
