--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
     "async": "^2.6.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "connect-mongodb-session": "^2.2.0",
-    "cookie-parser": "^1.4.4",
-    "debug": "^3.2.6",
+    "connect-mongodb-session": "^2.4.1",
+    "cookie-parser": "^1.4.5",
+    "debug": "^3.2.7",
     "dotenv": "^2.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "google-geolocation": "^1.0.2",
     "googleapis": "^47.0.0",
     "i": "^0.3.6",
     "ip": "^1.1.5",
-    "jquery": "^3.4.1",
-    "leaflet": "^1.6.0",
-    "mammoth": "^1.4.9",
+    "jquery": "^3.5.1",
+    "leaflet": "^1.7.1",
+    "mammoth": "^1.4.14",
     "mkdirp": "^0.5.1",
-    "moment": "^2.24.0",
-    "mongodb": "^3.4.1",
-    "mongoose": "^5.8.3",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.3",
+    "mongoose": "^5.11.11",
     "multer": "^1.4.2",
-    "node-rest-client": "^3.1.0",
     "office-ui-fabric-core": "^5.1.0",
     "office-ui-fabric-js": "^1.5.0",
+    "openweather-apis": "^4.4.1",
     "passport": "^0.3.2",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.5.0",
     "pug": "^2.0.4",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.5",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "serve-favicon": "^2.5.0"
   }
 }
