--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "multer": "^1.4.2",
     "office-ui-fabric-core": "^5.1.0",
     "office-ui-fabric-js": "^1.5.0",
+    "office-ui-fabric-vue": "^1.2.0",
     "openweather-apis": "^4.4.1",
     "passport": "^0.3.2",
     "passport-google-oauth2": "^0.2.0",
@@ -55,6 +56,7 @@
     "pug": "^2.0.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "vue2-timepicker": "^1.1.5"
   }
 }
