--- a/package.json
+++ b/package.json
@@ -26,25 +26,25 @@
     "arp": "0.0.3",
     "async": "^2.6.4",
     "bluebird": "^3.7.2",
-    "body-parser": "^1.20.0",
-    "connect-mongodb-session": "^2.4.1",
+    "body-parser": "^1.20.1",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "debug": "^3.2.7",
     "dotenv": "^2.0.0",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-geolocation": "^1.0.2",
-    "googleapis": "^47.0.0",
+    "googleapis": "^109.0.1",
     "i": "^0.3.7",
     "ip": "^1.1.8",
-    "jquery": "^3.6.0",
-    "leaflet": "^1.8.0",
-    "mammoth": "^1.4.21",
+    "jquery": "^3.6.1",
+    "leaflet": "^1.9.2",
+    "mammoth": "^1.5.1",
     "mkdirp": "^0.5.6",
     "moment": "^2.29.4",
     "mongodb": "^3.7.3",
-    "mongoose": "^5.13.14",
-    "multer": "^1.4.4",
+    "mongoose": "^5.13.15",
+    "multer": "^1.4.5-lts.1",
     "office-ui-fabric-core": "^5.1.0",
     "office-ui-fabric-js": "^1.5.0",
     "office-ui-fabric-vue": "^1.2.0",
@@ -53,10 +53,13 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.5.0",
-    "pug": "^2.0.4",
+    "pug": "^3.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "serve-favicon": "^2.5.0",
     "vue2-timepicker": "^1.1.6"
+  },
+  "devDependencies": {
+    "cypress": "^10.11.0"
   }
 }
