--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "async": "^2.6.4",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.1",
-    "connect-mongodb-session": "^3.1.1",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "debug": "^3.2.7",
     "dotenv": "^2.0.0",
@@ -47,7 +47,7 @@
     "mammoth": "^1.5.1",
     "mkdirp": "^0.5.6",
     "moment": "^2.29.4",
-    "mongodb": "^3.7.3",
+    "mongodb": "^4.12.1",
     "mongoose": "^5.13.15",
     "multer": "^1.4.5-lts.1",
     "office-ui-fabric-core": "^5.1.0",
@@ -65,6 +65,7 @@
     "vue2-timepicker": "^1.1.6"
   },
   "devDependencies": {
-    "cypress": "^11.2.0"
+    "cypress": "^11.2.0",
+    "start-server-and-test": "^1.14.0"
   }
 }
